Fix spacing, add default hero image, make bars for counterScores

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,8 +16,16 @@
 
  */
 
+ body {
+ 	background-color: #FFFCF7;
+ }
+
 .selected {
-	background-color: red;
+  background: blue; /* For browsers that do not support gradients */
+  background: -webkit-radial-gradient(blue, white); /* Safari 5.1 to 6.0 */
+  background: -o-radial-gradient(blue, white); /* For Opera 11.6 to 12.0 */
+  background: -moz-radial-gradient(blue, white); /* For Firefox 3.6 to 15 */
+  background: radial-gradient(blue, white)
 }
 
 .top-bar {
@@ -39,6 +47,12 @@
 
 .overwatch-font {
 	font-family: Big Noodle Too, impact, sans-serif;
+}
+
+.overwatch-header {
+	font-family: Big Noodle Too, impact, sans-serif;
+	font-style: italic;
+	font-size: 2em;
 }
 
 .label-font {
@@ -63,8 +77,16 @@
 	display: inline-block;
 }
 
+.top-bar {
+	padding: 0.5em 0.5em 0em 0.5em;
+}
+
 
 /* Rendering Heroes */
+
+.heroes {
+	height: 0em;
+}
 
 .offense-block {
 	width: calc((6% * 100 / 21) - 3%);
@@ -110,11 +132,55 @@
 /* Render Opponents */
 
 .opponent-wrapper {
-	width: ;
+	width: 6%;
+	display: inline-block;
+	margin: 0em 3em;
+}
+
+.opponent-text {
+	font-size: 0.8em;
 }
 
 /* Render Counters */
 
+.selected-counter {
+	text-align: center;
+}
+
+.counter-button {
+	width: 3em;
+	margin-left: auto;
+	margin-right: auto;
+}
+
 .counter  {
-	position: relative;
+	width: 100%;
+	padding: 1em;
+	margin-left: auto;
+	margin-right: auto;
+	left: 0;
+	right: 0;
+	text-align: center;
+}
+
+.positive-counter-score {
+	display: block;
+	background: #ffa800;
+	position: absolute;
+	left: 50%;
+	top: 1em;
+	bottom: 1em;
+	z-index: -1;
+	font-size: 1.5em;
+}
+
+.negative-counter-score {
+	display: block;
+	background: #0057FF;
+	position: absolute;
+	right: 50%;
+	top: 1em;
+	bottom: 1em;
+	z-index: -1;
+	font-size: 1.5em;
 }
